Add PostgreSQL dependency for testing
Added the org.postgresql:postgresql dependency with test scope to support PostgreSQL database testing.

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Liquibase for Database Migrations -->
         <dependency>
             <groupId>org.liquibase</groupId>
