--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,12 +1,11 @@
 # Test configuration for Dungeon Solver
 spring.application.name=dungeon-solver-test
 
-# H2 In-Memory Database for Testing
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/dungeon_solver
+spring.datasource.username=dungeon_user
+spring.datasource.password=dungeon_pass
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration for Testing
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -26,3 +25,5 @@ logging.level.org.springframework.web=INFO
 # Disable SpringDoc for tests
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
+
+spring.test.database.replace=none
