Update JQF dependencies to version 2.1
Added jqf-fuzz and updated jqf-maven-plugin dependencies to version 2.1 in pom.xml to ensure compatibility and access to new features.

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,18 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>edu.berkeley.cs.jqf</groupId>
+            <artifactId>jqf-fuzz</artifactId>
+            <version>2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>edu.berkeley.cs.jqf</groupId>
+            <artifactId>jqf-maven-plugin</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -115,7 +127,7 @@
             <plugin>
                 <groupId>edu.berkeley.cs.jqf</groupId>
                 <artifactId>jqf-maven-plugin</artifactId>
-                <version>1.8</version>
+                <version>2.1</version>
             </plugin>
 
             <plugin>
