--- a/.github/workflows/pit-maven.yml
+++ b/.github/workflows/pit-maven.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17' # ajuste se precisar
+          java-version: '23'
 
       - name: Cache Maven
         uses: actions/cache@v4
